objects/Application_Debug_Log__c/Application_Debug_Log__c.object-meta.xml
<CustomObject>
    <label>Application Debug Log</label>
    <nameField>
        <displayFormat>ADL - {0000}</displayFormat>
        <label>Application Debug Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>