objects/Application_Debug_Log__c/fields/Failed_Record_IDs__c.field-meta.xml
<CustomField>
    <fullName>Failed_Record_IDs__c</fullName>
    <label>Failed Record IDs</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>