objects/Application_Debug_Log__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <label>Service Request</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>