objects/Application_Debug_Log__c/fields/Service_Response__c.field-meta.xml
<CustomField>
    <fullName>Service_Response__c</fullName>
    <label>Service_Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>